--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grundschule und Europaschule</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet"
@@ -12,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div>
         <header>
           <div class="spot"></div>
             <nav>
@@ -44,7 +45,7 @@
                             <div class="slide-text">
                               <h3>SESB</h3>
                               <h4>Staatliche Europaschule in Berlin</h4>
-                              <button class="slide-button">Über uns!</button>
+                              <button class="btn slide-button">Über uns!</button>
                             </div>
                             <button class="slide-button">Über uns!</button>
                         </li>
@@ -53,7 +54,7 @@
                             <div class="slide-text">
                               <h3>SESB</h3>
                               <h4>Staatliche Europaschule in Berlin</h4>
-                              <button class="slide-button">Über uns</button>
+                              <button class="btn slide-button">Über uns!</button>
                             </div>
                         </li>
                         <li class="carousel-slide">
@@ -61,7 +62,7 @@
                             <div class="slide-text">
                               <h3>SESB</h3>
                               <h4>Staatliche Europaschule in Berlin</h4>
-                              <button class="slide-button">Über uns!</button>
+                              <button class="btn slide-button">Über uns!</button>
                             </div>
                         </li>
                     </ul>
@@ -113,22 +114,31 @@
               <li class="drop-item"><a href="">WUV</a></li>
             </ul>
           </div>
-          <div>
-
-            News
-            Förderverein
-            Projekte
-            Feste
-
+          <div class="table-section">
+            <table class="table">
+              <tbody>
+                <tr>
+                  <td class="square">News</td>
+                  <td class="square">Förderverein</td>
+                </tr>
+                <tr>
+                  <td class="square">Projekte</td>
+                  <td class="square">Feste</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
 
         <div class="footer">
           <footer>
-            <div>
-
-              <a href="">Kontakt - Impressum</a>
+            <div class="footer-kontakt">
+              <h3">Kontakt - Impressum</h3>
+              <p>Randomstr., 1001</p>
+              <p>10711</p>
+              <p>Telefon: (030) 92342 33234</p>
+              <p>E-mail: info@sesb-grundschule.de</p>
             </div>
-            <div>
+            <div class="footer-list">
               <ul>
                 <li><a href="">Datenschutzerklärung</a> </li>
                 <li><a href="">Gesamtelternvertretung</a> </li>
