--- a/index.html
+++ b/index.html
@@ -114,19 +114,16 @@
               <li class="drop-item"><a href="">WUV</a></li>
             </ul>
           </div>
+
           <div class="table-section">
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td class="square">News</td>
-                  <td class="square">Förderverein</td>
-                </tr>
-                <tr>
-                  <td class="square">Projekte</td>
-                  <td class="square">Feste</td>
-                </tr>
-              </tbody>
-            </table>
+            <div>
+              <div class="first-row col-lg-6"><a href="">News</a></div>
+              <div class="first-row col-lg-6"><a href="">Förderverein</a></div>
+            </div>
+            <div>
+              <div class="sec-row col-lg-6">Projekte</div>
+              <div class="sec-row col-lg-6">Feste</div>
+            </div>
           </div>
 
         <div class="footer">
