--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
               <div class="first-row col-lg-6"><a href="">Förderverein</a></div>
             </div>
             <div>
-              <div class="sec-row col-lg-6">Projekte</div>
-              <div class="sec-row col-lg-6">Feste</div>
+              <div class="sec-row col-lg-6"><a href="">Projekte</a></div>
+              <div class="sec-row col-lg-6"><a href="">Feste</a></div>
             </div>
           </div>
 
