--- a/index.html
+++ b/index.html
@@ -114,38 +114,40 @@
               <li class="drop-item"><a href="">WUV</a></li>
             </ul>
           </div>
-
-          <div class="table-section">
-            <div>
-              <div class="first-row col-lg-6"><a href="">News</a></div>
-              <div class="first-row col-lg-6"><a href="">Förderverein</a></div>
-            </div>
-            <div>
-              <div class="sec-row col-lg-6"><a href="">Projekte</a></div>
-              <div class="sec-row col-lg-6"><a href="">Feste</a></div>
+          <div class="container">
+            <div class="table-section">
+              <div>
+                <div class="first-row col-sm-12 col-lg-6"><a href="">News</a></div>
+                <div class="first-row col-sm-12 col-lg-6"><a href="">Förderverein</a></div>
+              </div>
+              <div>
+                <div class="sec-row col-lg-6"><a href="">Projekte</a></div>
+                <div class="sec-row col-lg-6"><a href="">Feste</a></div>
+              </div>
             </div>
           </div>
 
         <div class="footer">
           <footer>
-            <div class="footer-kontakt">
-              <h3">Kontakt - Impressum</h3>
-              <p>Randomstr., 1001</p>
-              <p>10711</p>
-              <p>Telefon: (030) 92342 33234</p>
-              <p>E-mail: info@sesb-grundschule.de</p>
-            </div>
-            <div class="footer-list">
-              <ul>
-                <li><a href="">Datenschutzerklärung</a> </li>
-                <li><a href="">Gesamtelternvertretung</a> </li>
-                <li><a href="">Archiv</a> </li>
-              </ul>
+            <div class="footer-col">
+              <div class="footer-list col-lg-6 col-sm-12">
+                <ul>
+                  <li><a href="">Datenschutzerklärung</a> </li>
+                  <li><a href="">Gesamtelternvertretung</a> </li>
+                  <li><a href="">Archiv</a> </li>
+                </ul>
+              </div>
+              <div class="footer-kontakt col-lg-6 col-sm-12">
+                <h3">Kontakt</h3>
+                <p>Randomstr., 1001</p>
+                <p>10711</p>
+                <p>Telefon: (030) 92342 33234</p>
+                <p>E-mail: info@sesb-grundschule.de</p>
+              </div>
             </div>
           </footer>
-
         </div>
-    
+
     </div>
 
     <script src="app.js"></script>
