--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
             </div>
           </footer>
         </div>
+        <div class="bottom">
+          <p>SESB Grundschule 2021</p>
+        </div>
 
     </div>
 
