--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
                 </ul>
               </div>
               <div class="footer-kontakt col-lg-6 col-sm-12">
-                <h3">Kontakt</h3>
-                <p>Randomstr., 1001</p>
-                <p>10711</p>
-                <p>Telefon: (030) 92342 33234</p>
-                <p>E-mail: info@sesb-grundschule.de</p>
+                <h4 id="kontakt-footer">Kontakt</h3>
+                <p class="kontakt-footer">Randomstr., 1001</p>
+                <p class="kontakt-footer">10711</p>
+                <p class="kontakt-footer">Telefon: (030) 92342 33234</p>
+                <p class="kontakt-footer">E-mail: info@sesb-grundschule.de</p>
               </div>
             </div>
           </footer>
