--- a/index.html
+++ b/index.html
@@ -114,18 +114,16 @@
               <li class="drop-item"><a href="">WUV</a></li>
             </ul>
           </div>
-          <div class="container">
             <div class="table-section">
               <div>
-                <div class="first-row col-sm-12 col-lg-6"><a href="">News</a></div>
-                <div class="first-row col-sm-12 col-lg-6"><a href="">Förderverein</a></div>
+                <div class="first-row"><a href="">News</a></div>
+                <div class="first-row"><a href="">Förderverein</a></div>
               </div>
               <div>
-                <div class="sec-row col-lg-6"><a href="">Projekte</a></div>
-                <div class="sec-row col-lg-6"><a href="">Feste</a></div>
+                <div class="sec-row"><a href="">Projekte</a></div>
+                <div class="sec-row"><a href="">Feste</a></div>
               </div>
             </div>
-          </div>
 
         <div class="footer">
           <footer>
