--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <div class="footer-kontakt col-lg-6 col-sm-12">
                 <h4 id="kontakt-footer">Kontakt</h3>
                 <p class="kontakt-footer">Randomstr., 1001</p>
-                <p class="kontakt-footer">10711</p>
+                <p class="kontakt-footer">10711 - Berlin</p>
                 <p class="kontakt-footer">Telefon: (030) 92342 33234</p>
                 <p class="kontakt-footer">E-mail: info@sesb-grundschule.de</p>
               </div>
