--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <li class="drop-item"><a href="">Freizeitbereich</a></li>
             <li class="drop-item"><a href="">Terminplan und Schulferien</a></li>
             <div id="intern">
-            <li class="drop-item"> <a href="">Finow intern</a></li>
+            <li class="drop-item"> <a href="">SESB intern</a></li>
             </div>
             </ul>
           </div>
@@ -103,7 +103,7 @@
             <ul class="drop-list-fach">
               <li class="drop-item"><a href="">Deutsch</a></li>
               <li class="drop-item"><a href="">Leseförderung</a></li>
-              <li class="drop-item"><a href="">Italienisch</a></li>
+              <li class="drop-item"><a href="">Partnersprache</a></li>
               <li class="drop-item"><a href="">Mathematik</a></li>
               <li class="drop-item"><a href="">Fremdsprachen</a></li>
               <li class="drop-item"><a href="">Naturwissenschaften/Sachkunde</a></li>
@@ -114,6 +114,16 @@
               <li class="drop-item"><a href="">WUV</a></li>
             </ul>
           </div>
+
+          <div class="drop_burguer">
+            <ul class="drop-list-burguer">
+              <li class="drop-item-burguer"><a href="">Die Schule</a> </li>
+              <li class="drop-item-burguer"><a href="">Fachbereiche</a> </li>
+              <li class="drop-item-burguer"><a href="">Bibliothek</a> </li>
+              <li class="drop-item-burguer"><a href="">Kontakt</a> </li>
+            </ul>
+          </div>
+
             <div class="table-section">
               <div>
                 <div class="first-row"><a href="">News</a></div>
