--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
                         <li class="carousel-slide">
                             <img src="schule-bild2.jpg" alt="">
                             <div class="slide-text">
-                              <h3>SESB</h3>
-                              <h4>Staatliche Europaschule in Berlin</h4>
-                              <button class="btn slide-button">Über uns!</button>
+                              <h3>Covid-19</h3>
+                              <h4>Maßnahmen gegen das Coronavirus</h4>
+                              <button class="btn slide-button">Weiter</button>
                             </div>
                         </li>
                         <li class="carousel-slide">
                             <img src="schule-bild3.jpg" alt="">
                             <div class="slide-text">
-                              <h3>SESB</h3>
-                              <h4>Staatliche Europaschule in Berlin</h4>
-                              <button class="btn slide-button">Über uns!</button>
+                              <h3>Lesezeit!</h3>
+                              <h4>Unsere Bibliothek</h4>
+                              <button class="btn slide-button">Bibliothek</button>
                             </div>
                         </li>
                     </ul>
