--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
               </div>
             </div>
 
+            <div class="video">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/Bk1SfRHtLcE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
         <div class="footer">
           <footer>
             <div class="footer-col">
